--- a/public/index.html
+++ b/public/index.html
@@ -9,14 +9,12 @@
       <meta name="author" content="mario.carranza996@gmail.com">
       <meta name="theme-color" content="#000000" />
       <meta name="description" content="This is a web site for lawyers in italia called Kairos"/>
-      <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
       <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
       <link rel="preconnect" href="https://fonts.gstatic.com" />
       <link href="https://fonts.googleapis.com/css2?family=Work+Sans&display=swap" rel="stylesheet" />
       <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.1.0/mdb.min.css" rel="stylesheet"/>
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
       <link rel="stylesheet" href="%PUBLIC_URL%/assets/css/style.css" type = "text/css" />
-      <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
       <title>Kairos</title>
   </head>
   <body>
@@ -24,9 +22,9 @@
       <div id="root"></div>
 
       <script src="%PUBLIC_URL%/assets/js/jquery-3.1.0.js"></script>
-      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-      <script>
-         AOS.init({duration: 1000,});
-      </script>
+      <script
+         type="text/javascript"
+         src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.1.0/mdb.min.js"
+         ></script>
   </body>
 </html>
